# amogus

./: .env.example  .gitignore  README.md  api_methods.py  entities.py  logs.txt  main.py  pyproject.toml  requirements.txt  tui-app.py
.github/workflows/: main.yml
amogus_tui_app/: __init__.py  api_methods.py  app.py  main.py  selected_items.py  settings.py  timer.py  tui_app.py  utils.py
amogus_tui_app/models/: entities.py  settings.py
amogus_tui_app/services/: api_client.py
src/: __init__.py  app.py  color.tcss  main.py  selected_items.py  utils.py
src/clients/: async_client.py
src/exceptions/: api_exc.py  custom.py
src/models/: entities.py  settings.py
src/services/: api_client.py  async_client.py  cycle_service.py  modulegroup_service.py  push_service.py  select_service.py  storage_service.py  timer_service.py
src/tests/: test_push_service.py  test_select.py
src/views/: menu_tree.py
